fixed logo not centered on tablets, added padding shrink logo after animations end

--- a/src/components/NavMenuContainer/nav-menu-container.module.scss
+++ b/src/components/NavMenuContainer/nav-menu-container.module.scss
@@ -50,6 +50,9 @@
 .relative-menu{
     width:100%;
     padding:10px 15px;
+    @include breakpoint(sm){
+        padding:10px 5vw;
+    }
     @include breakpoint(lg){
         width:unset;
         padding:unset;
