--- a/src/components/PageIntro/page-intro.module.scss
+++ b/src/components/PageIntro/page-intro.module.scss
@@ -13,7 +13,9 @@
 }
 
 .content-row{
-    display:flex;
+    @include breakpoint(sm){
+        display:flex;
+    }
 }
 
 .heading{
