--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -10,7 +10,7 @@
     margin-left:50px;
     @include breakpoint(sm){
         width:20vw;
-        margin-right: 5vw;
+        margin-left:5vw;
     }
     @include breakpoint(lg){
         width:12.5vw;
